--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <button class="btn" id="btn4">4</button>
                     <button class="btn" id="btn5">5</button>
                     <button class="btn" id="btn6">6</button>
-                </div>
+                </div>  
                 <div class="btn-row">
                     <button class="btn" id="btn1">1</button>
                     <button class="btn" id="btn2">2</button>
@@ -35,6 +35,7 @@
                 <div class="btn-row">
                     <button class="btn btn-double-w" id="btn0">0</button>
                     <button class="btn" id="btnDot">.</button>
+                    <button class="btn" id="btni">i</button>
                 </div>
             </div>
     
