--- a/index.html
+++ b/index.html
@@ -40,16 +40,26 @@
             </div>
     
             <div class="btn-pad-right">
-                <div class="btn-column">
-                    <button class="btn" id="btnCE">CE</button>
+                <div class="btn-column_2">
                     <button class="btn" id="btnD">&divide;</button>
                     <button class="btn" id="btnM">&minus;</button>
                     <button class="btn" id="btnE">&equals;</button>
                 </div>
-                <div class="btn-column">
-                    <button class="btn" id="btnC">C</button>
+                <div class="btn-column_2">
                     <button class="btn" id="btnT">&times;</button>
                     <button class="btn btn-double-h" id="btnP">&plus;</button>
+                </div>
+                <div class="btn-column">
+                    <button class="btn" id="btnCE">CE</button>
+                    <button class="btn" id="btn_par1">(</button>
+                    <button class="btn" id="btn_par2">)</button>
+                    <button class="btn" id="btn_fat">!</button>    
+                </div>
+                <div class="btn-column">
+                    <button class="btn" id="btnC">C</button>
+                    <button class="btn" id="btn_pot">x<sup>y</sup></button>
+                    <button class="btn" id="btn_rad">&#8730;</button>
+                    <button class="btn" id="btn_?">%</button>    
                 </div>
             </div>
     
